--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eva-00",
+  "name": "hold-bitcoin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.21.1",
+    "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.12.1",
+    "@types/styled-components": "^5.1.11",
+    "@types/uuid": "^8.3.1"
   }
 }
