--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "polished": "^4.1.3",
     "react": "^17.0.2",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.1.4",
     "@types/react-modal": "^3.12.1",
     "@types/styled-components": "^5.1.11",
     "@types/uuid": "^8.3.1"
