--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-datepicker": "^4.1.4",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.1",
+    "@types/styled-components": "^5.1.11",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.1",
     "polished": "^4.1.3",
     "react": "^17.0.2",
@@ -46,11 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-datepicker": "^4.1.4",
-    "@types/react-modal": "^3.12.1",
-    "@types/styled-components": "^5.1.11",
-    "@types/uuid": "^8.3.1"
   }
 }
